bugs and optimisation. scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,13 @@ html {
 }
 
 /* Hide scrollbar but allow scrolling */
-.App {
+.classsec {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
 }
 
-.App::-webkit-scrollbar {
+.classsec::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
 
