--- a/src/components/exp/exp.css
+++ b/src/components/exp/exp.css
@@ -22,6 +22,16 @@
   box-sizing: border-box;
 }
 
+.expcards {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+
+.expcards::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
 .needle {
   height: 100%;
   display: flex;
